# M_AI_doorbell_xiaozhi

./: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
doc/: note.md
main/: CMakeLists.txt  idf_component.yml  main.c
main/audio/: audio_decode.c  audio_decode.h  audio_encode.c  audio_encode.h  audio_process.c  audio_process.h  audio_sr.c  audio_sr.h
main/bsp/: bsp.c  bsp.h  bsp_display.c  bsp_display.h  bsp_es8311.c  bsp_es8311.h  bsp_lcd.c  bsp_lcd.h  bsp_mutable_buffer.c  bsp_mutable_buffer.h  bsp_nvs.c  bsp_nvs.h  bsp_wifi.c  bsp_wifi.h  bsp_ws2812.c  bsp_ws2812.h
main/com/: com_debug.c  com_debug.h  com_status.c  com_status.h
main/protocol/: pro_https.c  pro_https.h  pro_mqtt.c  pro_mqtt.h  pro_ws.c  pro_ws.h
