idf_component_register(
  SRCS
  "main.c"
  "./com/com_debug.c"
  "./bsp/bsp.c"
  "./bsp/bsp_nvs.c"
  "./bsp/bsp_mutable_buffer.c"
  "./bsp/bsp_es8311.c"
  "./bsp/bsp_wifi.c"
  "./bsp/bsp_ws2812.c"
  "./audio/audio_sr.c"
  "./audio/audio_decode.c"
  "./audio/audio_encode.c"
  "./audio/audio_process.c"
  "./protocol/pro_https.c"
  "./protocol/pro_ws.c"
  "./com/com_status.c"
  "./bsp/bsp_lcd.c"
  "./bsp/bsp_display.c"
  INCLUDE_DIRS
  "."
  "./bsp"
  "./audio"
  "./com"
  "./protocol")
